--- a/templates/search.html
+++ b/templates/search.html
@@ -3,8 +3,8 @@
     </head>
     <body>
         <form action="/search" method = "GET">
-            <p>Inserisci la lingua del film <input type = "text" name = "film" /></p>
-            <p><input type = "submit" value = "Clicca per conoscere i dati" /></p>
+            <p>ecco i film in inglese</p>
+            <p><input type = "submit" value = "Clicca per i film in inglese" /></p>
         </form>
     </body>
 </html>
